-Added a coming soon message to the ways to use page - Added the icons and what they represent to the explore icons page

--- a/src/pages/explore-icons/explore-icons.html
+++ b/src/pages/explore-icons/explore-icons.html
@@ -16,5 +16,61 @@
   </ion-header>
 
 <ion-content padding>
-
+  <ion-grid>
+    <ion-row>
+      <ion-col>
+<!--Hospitals-->
+<img class="image" height="120vw" width="120vw"  src= "./assets/imgs/hospital.png">
+<p text-center>Hospitals</p>
+      </ion-col>
+      <ion-col>
+<!--Telestroke Sites-->
+<img class="image" height="120vw" width="120vw"  src= "./assets/imgs/telestroke.png">
+<p text-center>Telestroke Sites</p>
+      </ion-col>
+    </ion-row>
+    <ion-row>
+      <ion-col>
+<!--tPA Sites-->
+<img class="image" height="120vw" width="120vw"  src= "./assets/imgs/tPA.png">
+<p text-center>tPA Capable Sites</p>
+      </ion-col>
+      <ion-col>
+<!--EVT Sites-->
+<img class="image" height="120vw" width="120vw"  src= "./assets/imgs/EVT.png">
+<p text-center>EVT Capable Sites</p>
+      </ion-col>
+    </ion-row>
+  <ion-row>
+    <ion-col>
+<!--Health Services-->
+<img class="image" height="120vw" width="120vw"  src= "./assets/imgs/healthservices.png">
+<p text-center>Health Services</p>
+    </ion-col>
+    <ion-col>
+<!--Helipads-->
+<img class="image" height="120vw" width="120vw"  src= "./assets/imgs/helipad.png">
+<p text-center>Helipads</p>
+    </ion-col>
+  </ion-row>
+  <ion-row>
+    <ion-col>
+<!--Airports-->
+<img class="image" height="120vw" width="120vw"  src= "./assets/imgs/airport.png">
+<p text-center>Airports</p>
+    </ion-col>
+    <ion-col>
+<!--Ambulance Bases-->
+<img class="image" height="120vw" width="120vw"  src= "./assets/imgs/ambulance.png">
+<p text-center>Ambulance Bases</p>
+    </ion-col>
+  </ion-row>
+  <ion-row>
+    <ion-col>
+<!--ORNGE Bases-->
+<img class="image" height="120vw" width="120vw"  src= "./assets/imgs/ornge.png">
+<p text-center>ORNGE Bases</p>
+    </ion-col>
+  </ion-row>
+  </ion-grid>
 </ion-content>
