--- a/src/pages/patient-location/patient-location.html
+++ b/src/pages/patient-location/patient-location.html
@@ -18,7 +18,9 @@
   <h3 text-center id="lastKnownWell-heading5" >
     Where is the<br>patient located?
   </h3>
-  
+  <!-- This is used to see the screen size of different phones without the debugging part 
+  <p>Device Height: {{this.Data.height}}<br>Device Width: {{this.Data.width}}</p>
+  -->
   <div style="height:5vh;"></div>
   <!--This button is currently disabled it would require a search of all the health centers to see which one is the closest but in order to cut down on the amount of queries we are making I would like to figure out how to store it all locally and synchronize before moving on with this part-->
   <!--<button type ="button"  id="patientLocation-button1"  ion-button fill="outline"  block on-click="setCurrentPosition()" large round> 
