--- a/src/pages/welcome/welcome.html
+++ b/src/pages/welcome/welcome.html
@@ -1,10 +1,17 @@
 
 <ion-content padding>
-  <div style="height: 20vh;"></div>
+  <div class="Vertical-center">
+  <!--<div  style="height: 20%;"></div>-->
+  <ion-grid>
+    <ion-row>
 <img src="./assets/icon/Logo.png">
 <br>
-
-<button ion-button  block on-click="goToLKW()" large round>
+</ion-row>
+<ion-row>
+<button ion-button style="display: block;"  block on-click="goToLKW()" large round>
   Next 
 </button>
+</ion-row>
+</ion-grid>
+</div>
 </ion-content>
