--- a/src/pages/last-known-well/last-known-well.html
+++ b/src/pages/last-known-well/last-known-well.html
@@ -11,22 +11,24 @@
   </ion-navbar>
 </ion-header>
 <ion-content no-bounce padding >
-  <div class="vertical-center" style="border: blue solid 3px;">
-    <ion-grid style="border: solid black 1px;height:100%">
+  <div class="vertical-center" >
+    <ion-grid style="height:85vh !important;display: flex;flex-flow: column;">
     <!-- -->
 <!--<div style="height:6vh;"></div>-->
-<ion-row style="border: solid black 1px;">
+<ion-row class="row">
+  <ion-col>
   <h3 text-center id="lastKnownWell-heading5" >
     What time was<br> the patient last known to be well?
   </h3>
-  <br><br><br><br>
+</ion-col>
 </ion-row>
 <!--
   <div style="height:6vh;"></div>
   -->
    
   <form [formGroup]="timeForm" ><!--The last known well in hour format-->
-    <ion-row align-items-start style="border: solid black 1px; height: 30%;" >
+    <ion-row align-items-center class="row" >
+      <ion-col>
     <p text-center> Date</p>
     <br>
     <ion-item id="lastKnownWellDate" style="background-color: lightgray;text-align: center;" class="roundedEntry">
@@ -42,21 +44,24 @@
     <!--Break between inputs and the button to make it consistent-->
   
 
-    <ion-row center style="border: solid black 1px;">
+    <ion-row center class="row">
       <ion-col text-center>
       <button ion-button center round (click)="TimeModal($event)" small style="text-align: center;font-size: larger;">
         <img class="image" height="25vh" width="25vh" src= "./assets/imgs/MagnifyTW.png">
            Tips</button>
     </ion-col>  
   </ion-row>
+  </ion-col>
   </ion-row>
 <!--
     <div class="spacer" style="height:7vh;" id="lastKnownWell-spacer7"></div>
     -->
-    <ion-row align-items-end style="border: solid black 1px;">
+    <ion-row align-items-end class="row">
+      <ion-col>
     <button (click)="SubmitTime()" id="lastKnownWell-button3" ion-button [disabled]="!timeForm.valid" type="submit" block round large><!--The button will not be accessible until a value is entered for the time-->
       Next
     </button>
+  </ion-col>
   </ion-row>
   </form>
 </ion-grid>
