--- a/src/pages/city/city.html
+++ b/src/pages/city/city.html
@@ -1,5 +1,5 @@
 <ion-header>
-  <ion-navbar text-center>
+  <ion-navbar text-center align-title="center">
     <ion-title >Next Steps</ion-title>
     <ion-buttons end>
       <button ion-button icon-only menuToggle right>
