--- a/src/pages/contact/contact.html
+++ b/src/pages/contact/contact.html
@@ -1,5 +1,5 @@
 <ion-header>
-  <ion-navbar text-center>
+  <ion-navbar >
     <ion-title>Contact</ion-title>
     <ion-buttons end>
       <button ion-button (click)="CloseInfo()">Close</button>
