--- a/src/pages/evt-options/evt-options.html
+++ b/src/pages/evt-options/evt-options.html
@@ -1,5 +1,5 @@
 <ion-header>
-  <ion-navbar text-center>
+  <ion-navbar text-center align-title="center">
     <ion-title>
       EVT Routes
     </ion-title>
