--- a/src/pages/explore-icons/explore-icons.html
+++ b/src/pages/explore-icons/explore-icons.html
@@ -5,7 +5,7 @@
   Ionic pages and navigation.
 -->
 <ion-header>
-  <ion-navbar text-center>
+  <ion-navbar text-center align-title="center">
     <ion-title style="font-size: x-large;"><!--keep the font size extra large I think this allows it to change with different devices instead of specifying a font size or pixel size -->
       Explore Icons
     </ion-title>
