-updated the map pages with the general function which is kept in the data service provider - Started messing with the contact page in order to get it to fit better

--- a/src/pages/evt-options/evt-options.html
+++ b/src/pages/evt-options/evt-options.html
@@ -171,6 +171,7 @@
     </ion-list>
     </ion-scroll><!--Close all of the divs exactly the same way it is done in HTML-->
     </div>
+    <ion-footer>
     <ion-grid style="background-color: #006bb6;">
       <ion-row>
         <ion-col col-auto>
@@ -184,4 +185,5 @@
         </ion-col>
       </ion-row>
     </ion-grid>
+  </ion-footer>
 </ion-content>
