--- a/src/pages/imaging/imaging.html
+++ b/src/pages/imaging/imaging.html
@@ -1,4 +1,4 @@
-<ion-header>
+<ion-header #header>
   <ion-navbar  text-center>
     <ion-title>
       Imaging Routes
@@ -16,21 +16,27 @@
 
 <ion-content no-bounce  id="Imaging"  >
 <div style="display: flex;flex-direction: column;height: 100%;">
+  <div #title >
   <h4 id="treatment-heading6" text-center style="color:#006bb6;font-size: x-large;"><!--the header for the page with style specified  -->
  
    Routes to Imaging<br>Capable Hospitals
   </h4>
-  <div *ngIf="Spinner" style="height: 58.9vh;">
+</div>
+  <div id="spin" *ngIf="Spinner" style="height: 58.9vh;">
   <spinner ></spinner>
 </div><!--ngIF is a special ionic element that works like an if and only shows if true in this case if spinner is true it will show it -->
-  <div class="card-scroll" *ngIf="show"><!--this is where the cards will be once show is set to true  -->
+
+  <div class="card-scroll" id="card" *ngIf="show"><!--this is where the cards will be once show is set to true  -->
+    <div id="addedText">
     <p text-center style="color: black;">Click on the route option for next steps</p>
+  </div>
 <div *ngIf="results"><!--if there are no results this will show the error message  -->
   <br><br>
   <p style="font-size: large;">{{display}}</p>
   
 </div>
-    <ion-scroll scrollY="true" style="height: 68.9vh; color: white;" ><!--this is the actual card section which is allowed to scroll but I will need to revisit the height to have it work on more devices  -->
+
+    <ion-scroll scrollY="true" [style.height]=contentHeight style="color: white;" ><!--this is the actual card section which is allowed to scroll but I will need to revisit the height to have it work on more devices  -->
 <ion-list justify-content-center align-items-center><!--the list of elements all put into the center -->
   <ion-item *ngFor="let card of cards" ><!--ngFor is another ionic element that allows you to iterate through a list each one being called card in this case -->
     <ion-card *ngIf="card.Driving" tappable (click)="goToRoute(card)"  text-wrap [style.background-color]="card.colour"><!--These are if the card is a driving type and wil call the normal routing function -->
@@ -202,7 +208,7 @@
 </ion-scroll>
 </div>
 
-<ion-footer>
+<ion-footer #footer>
          <!--This is the weather display which has the data stored in the data provider and makes use of the ionic {{}} access to date types along with a data pipeline to better format the numbers -->
          <ion-grid style="background-color: #006bb6;">
           <ion-row>
@@ -217,7 +223,7 @@
             </ion-col>
           </ion-row>
         </ion-grid>
-    </ion-footer>
+      </ion-footer>
 
       </div>
 </ion-content>
