-the prod is kind of working but it is just going to a white screen -many files where changed but the app is still working - changed the tutorial so it would show next steps

--- a/src/pages/menu/explore-icons/explore-icons.html
+++ b/src/pages/menu/explore-icons/explore-icons.html
@@ -66,7 +66,7 @@
     </ion-col>
   </ion-row>
   <ion-row>
-    <ion-col>
+    <ion-col text-center>
 <!--ORNGE Bases-->
 <img class="image" height="120vw" width="120vw"  src= "./assets/imgs/ornge.png">
 <p text-center>ORNGE Bases</p>
