--- a/src/pages/menu/tutorial-modal/tutorial-modal.html
+++ b/src/pages/menu/tutorial-modal/tutorial-modal.html
@@ -27,7 +27,7 @@
 <ion-slides pager="true" style="color: blue;">
   <ion-slide>
     <img class="SlideImg" src= "./assets/icon/Logo.png">
-    <p>Slide 1</p>
+    <p>Coming Soon</p>
   </ion-slide>
   <ion-slide>
     <img class="SlideImg" src= "./assets/Travel/Ambulance.png">
