--- a/src/pages/next-steps/next-steps.html
+++ b/src/pages/next-steps/next-steps.html
@@ -16,7 +16,7 @@
   <div id="Destination" text-center>
     <h1><b>{{start}} to {{end}}</b></h1>
   </div>
-  <div id="Plan" [ngSwitch]="plan" style="height: 60vh;font-size: medium;" >
+  <div id="Plan" [ngSwitch]="plan" style="font-size: medium;" >
     <div *ngSwitchCase="2">
       <div text-center>
       <br><h4 text-center>Transfer Patient immediately as per your Acute Stroke Protocol</h4>
