--- a/src/pages/t-pa-no/t-pa-no.html
+++ b/src/pages/t-pa-no/t-pa-no.html
@@ -16,16 +16,17 @@
   <div id="Destination" text-center>
     <h1><b>{{this.Data.StartLoc.city}}</b></h1>
   </div>
- <div style="height: 58vh;font-size: medium;"> 
+ <div style="font-size: medium;"> 
 
 <div>
   <br><h4 text-center>Consult with<br> Telestroke Neurologist<br> utilizing the Telestroke program<br>for treatment options</h4><br>
   <div text-center>
-  <p><a href="tel:8006684357" center ion-button round  small class="callButton"><button ion-button small>Call</button></a><br>CritiCall <span class="Call"><br>@ 1-800-668-4357</span></p><br><br>
+  <p><a href="tel:8006684357" center ion-button round  small class="callButton"><button ion-button small>Call</button></a><br>CritiCall <span class="Call"><br>@ 1-800-668-4357</span></p>
 </div>
   <h5><i>Reference:</i></h5><p><i>Telestroke Referring Site Handbook</i></p>
 </div>
 </div>
+<br>
   <button ion-button block on-click="Treatment()" round large>Treatment Options</button>
   <button ion-button block on-click="ExploreMap()" round large>Explore My Area</button>
   <button ion-button block on-click="GoToBestPractice()" round large>Patient Care - Best Practice</button>
