-modified the pages to include the new travel times

--- a/src/pages/treatment/treatment.html
+++ b/src/pages/treatment/treatment.html
@@ -62,7 +62,7 @@
               <br><!-- Put in the line somewhere here to have the expansion separated-->
               <div *ngIf="card.HistDrive">
                 <p style="font-size: small;color: white;">Historical Time to Definitive Care
-                  <span style="font-size: medium;"><b> {{card.HistDriveDat.AvgString}}<!-- (n=X)--></b></span></p>
+                  <span style="font-size: medium;"><b> {{card.HistDriveDat.TimeString}}<!-- (n=X)--></b></span></p>
               </div>
               <div *ngIf="!card.HistDrive">
                 <p style="font-size: small;color: white;">Historical Time to Definitive Care
@@ -80,7 +80,7 @@
               </ion-col>
               <ion-col>
                 <div *ngIf="card.HistDrive">
-                  <p class="imageText"><!--{{card.Drive.TimeWithMultChar}}-->{{card.HistDriveDat.AvgString}}</p>
+                  <p class="imageText"><!--{{card.Drive.TimeWithMultChar}}-->{{card.HistDriveDat.TimeString}}</p>
                 </div>
                 <div *ngIf="!card.HistDrive">
                   <p class="imageText"><!--{{card.Drive.TimeWithMultChar}}-->XX:XX</p>
@@ -132,7 +132,7 @@
               <br>
               <div *ngIf="card.HistDrive">
                 <p style="font-size: small;color: white;">Historical Time to Definitive Care
-                  <span style="font-size: medium;"><b> {{card.HistDriveDat.AvgString}}<!-- (n=X)--></b></span></p>
+                  <span style="font-size: medium;"><b> {{card.HistDriveDat.TimeString}}<!-- (n=X)--></b></span></p>
               </div>
               <div *ngIf="!card.HistDrive">
                 <p style="font-size: small;color: white;">Historical Time to Definitive Care
@@ -161,7 +161,7 @@
                 </ion-col>
                 <ion-col>
                   <div *ngIf="card.HistDrive">
-                    <p class="imageText"><!--{{card.Drive.TimeWithMultChar}}-->{{card.HistDriveDat.AvgString}}</p>
+                    <p class="imageText"><!--{{card.Drive.TimeWithMultChar}}-->{{card.HistDriveDat.TimeString}}</p>
                   </div>
                   <div *ngIf="!card.HistDrive">
                     <p class="imageText"><!--{{card.Drive.TimeWithMultChar}}-->XX:XX</p>
@@ -219,7 +219,7 @@
                 <br><!-- Put in the line somewhere here to have the expansion separated-->
                 <div *ngIf="card.HistDrive">
                   <p style="font-size: small;color: white;">Historical Time to Definitive Care
-                    <span style="font-size: medium;"><b> {{card.HistDriveDat.AvgString}}<!-- (n=X)--></b></span></p>
+                    <span style="font-size: medium;"><b> {{card.HistDriveDat.TimeString}}<!-- (n=X)--></b></span></p>
                 </div>
                 <div *ngIf="!card.HistDrive">
                   <p style="font-size: small;color: white;">Historical Time to Definitive Care
@@ -237,7 +237,7 @@
                 </ion-col>
                 <ion-col>
                   <div *ngIf="card.HistDrive">
-                    <p class="imageText"><!--{{card.Drive.TimeWithMultChar}}-->{{card.HistDriveDat.AvgString}}</p>
+                    <p class="imageText"><!--{{card.Drive.TimeWithMultChar}}-->{{card.HistDriveDat.TimeString}}</p>
                   </div>
                   <div *ngIf="!card.HistDrive">
                     <p class="imageText"><!--{{card.Drive.TimeWithMultChar}}-->XX:XX</p>
@@ -289,7 +289,7 @@
                 <br>
                 <div *ngIf="card.HistDrive">
                   <p style="font-size: small;color: white;">Historical Time to Definitive Care
-                    <span style="font-size: medium;"><b> {{card.HistDriveDat.AvgString}}<!-- (n=X)--></b></span></p>
+                    <span style="font-size: medium;"><b> {{card.HistDriveDat.TimeString}}<!-- (n=X)--></b></span></p>
                 </div>
                 <div *ngIf="!card.HistDrive">
                   <p style="font-size: small;color: white;">Historical Time to Definitive Care
@@ -318,7 +318,7 @@
                   </ion-col>
                   <ion-col>
                     <div *ngIf="card.HistDrive">
-                      <p class="imageText"><!--{{card.Drive.TimeWithMultChar}}-->{{card.HistDriveDat.AvgString}}</p>
+                      <p class="imageText"><!--{{card.Drive.TimeWithMultChar}}-->{{card.HistDriveDat.TimeString}}</p>
                     </div>
                     <div *ngIf="!card.HistDrive">
                       <p class="imageText"><!--{{card.Drive.TimeWithMultChar}}-->XX:XX</p>
