--- a/src/pages/evt-options/evt-options.html
+++ b/src/pages/evt-options/evt-options.html
@@ -54,7 +54,7 @@
               <br><!-- Put in the line somewhere here to have the expansion separated-->
               <div *ngIf="card.HistDrive">
                 <p style="font-size: small;color: white;">Historical Time to Definitive Care
-                  <span style="font-size: medium;"><b> {{card.HistDriveDat.AvgString}}<!-- (n=X)--></b></span></p>
+                  <span style="font-size: medium;"><b> {{card.HistDriveDat.TimeString}}<!-- (n=X)--></b></span></p>
               </div>
               <div *ngIf="!card.HistDrive">
                 <p style="font-size: small;color: white;">Historical Time to Definitive Care
@@ -72,7 +72,7 @@
               </ion-col>
               <ion-col>
                 <div *ngIf="card.HistDrive">
-                  <p class="imageText"><!--{{card.Drive.TimeWithMultChar}}-->{{card.HistDriveDat.AvgString}}</p>
+                  <p class="imageText"><!--{{card.Drive.TimeWithMultChar}}-->{{card.HistDriveDat.TimeString}}</p>
                 </div>
                 <div *ngIf="!card.HistDrive">
                   <p class="imageText"><!--{{card.Drive.TimeWithMultChar}}-->XX:XX</p>
@@ -124,7 +124,7 @@
               <br>
               <div *ngIf="card.HistDrive">
                 <p style="font-size: small;color: white;">Historical Time to Definitive Care:
-                  <span style="font-size: medium;"><b> {{card.HistDriveDat.AvgString}} <!--(n=X)--></b></span></p>
+                  <span style="font-size: medium;"><b> {{card.HistDriveDat.TimeString}} <!--(n=X)--></b></span></p>
               </div>
               <div *ngIf="!card.HistDrive">
                 <p style="font-size: small;color: white;">Historical Time to Definitive Care:
@@ -154,7 +154,7 @@
                 </ion-col>
                 <ion-col>
                   <div *ngIf="card.HistDrive">
-                    <p class="imageText"><!--{{card.Drive.TimeWithMultChar}}-->{{card.HistDriveDat.AvgString}}</p>
+                    <p class="imageText"><!--{{card.Drive.TimeWithMultChar}}-->{{card.HistDriveDat.TimeString}}</p>
                   </div>
                   <div *ngIf="!card.HistDrive">
                     <p class="imageText"><!--{{card.Drive.TimeWithMultChar}}-->XX:XX</p>
