--- a/src/pages/imaging/imaging.html
+++ b/src/pages/imaging/imaging.html
@@ -63,7 +63,7 @@
             <br><!-- Put in the line somewhere here to have the expansion separated-->
               <div *ngIf="card.HistDrive">
                 <p style="font-size: small;color: white;">Historical Time to Definitive Care
-                <span style="font-size: medium;"><b> {{card.HistDriveDat.AvgString}}<!-- (n=X)--></b></span></p>
+                <span style="font-size: medium;"><b> {{card.HistDriveDat.TimeString}}<!-- (n=X)--></b></span></p>
               </div>
               <div *ngIf="!card.HistDrive">
                 <p style="font-size: small;color: white;">Historical Time to Definitive Care
@@ -81,7 +81,7 @@
             </ion-col>
             <ion-col>
               <div *ngIf="card.HistDrive">
-                <p class="imageText"><!--{{card.Air.TimeWithMultChar}}-->{{card.HistDriveDat.AvgString}}</p>
+                <p class="imageText"><!--{{card.Air.TimeWithMultChar}}-->{{card.HistDriveDat.TimeString}}</p>
               </div>
               <div *ngIf="!card.HistDrive">
                 <p class="imageText"><!--{{card.Air.TimeWithMultChar}}-->XX:XX</p>
@@ -133,7 +133,7 @@
             <br>
             <div *ngIf="card.HistDrive">
               <p style="font-size: small;color: white;">Historical Time to Definitive Care
-              <span style="font-size: medium;"><b> {{card.HistDriveDat.AvgString}}<!-- (n=X)--></b></span></p>
+              <span style="font-size: medium;"><b> {{card.HistDriveDat.TimeString}}<!-- (n=X)--></b></span></p>
             </div>
             <div *ngIf="!card.HistDrive">
               <p style="font-size: small;color: white;">Historical Time to Definitive Care
@@ -162,7 +162,7 @@
               </ion-col>
               <ion-col>
                 <div *ngIf="card.HistDrive">
-                  <p class="imageText"><!--{{card.Air.TimeWithMultChar}}-->{{card.HistDriveDat.AvgString}}</p>
+                  <p class="imageText"><!--{{card.Air.TimeWithMultChar}}-->{{card.HistDriveDat.TimeString}}</p>
                 </div>
                 <div *ngIf="!card.HistDrive">
                   <p class="imageText"><!--{{card.Air.TimeWithMultChar}}-->XX:XX</p>
