-modified the intro page to not be stretched out

--- a/src/pages/welcome/welcome.html
+++ b/src/pages/welcome/welcome.html
@@ -4,7 +4,7 @@
   <!--<div  style="height: 20%;"></div>-->
   <ion-grid>
     <ion-row>
-<img src="./assets/icon/Logo.png">
+<img src="./assets/icon/Logo.png"style="width: 100%;height:70%;">
 <br>
 </ion-row>
 <ion-row>
