-before making changes to errors -currently working again but not on the emulator

--- a/src/pages/city/city.html
+++ b/src/pages/city/city.html
@@ -24,6 +24,8 @@
     <a href="tel:911" center ion-button round  small class="callButton"><button ion-button small>Call</button></a><br>9-1-1 
   <br><br>OR<br><br> your local emergency number</p>
 </div>
+<ion-footer mode="md">
  <button ion-button block on-click="GoToMap()" round large>Explore My Area</button>
 <button ion-button block on-click="GoToBestPractice()" round large>Patient Care - Best Practice</button>
+</ion-footer>
 </ion-content>
