--- a/src/pages/evt-options/evt-options.html
+++ b/src/pages/evt-options/evt-options.html
@@ -172,7 +172,7 @@
     </ion-list>
     </ion-scroll><!--Close all of the divs exactly the same way it is done in HTML-->
     </div>
-    <ion-footer #footer>
+    <ion-footer mode="md" #footer >
     <ion-grid style="background-color: #006bb6;">
       <ion-row>
         <ion-col col-auto>
