--- a/src/pages/imaging/imaging.html
+++ b/src/pages/imaging/imaging.html
@@ -206,7 +206,7 @@
 </ion-scroll>
 </div>
 
-<ion-footer #footer>
+<ion-footer mode="md" #footer>
          <!--This is the weather display which has the data stored in the data provider and makes use of the ionic {{}} access to date types along with a data pipeline to better format the numbers -->
          <ion-grid style="background-color: #006bb6;">
           <ion-row>
