--- a/src/pages/regional-stroke/regional-stroke.html
+++ b/src/pages/regional-stroke/regional-stroke.html
@@ -45,7 +45,9 @@
   <h5><i>Reference:</i></h5><p><i>NWO TIA and Mild Non-Disabling Stroke TRIAGE Algorithm. Specifically the section for >48 hours</i></p>
 </div>
 </div>
+<ion-footer mode="md">
   <button *ngIf="Button" ion-button block on-click="Treatment()" round large>Treatment Options</button>
   <button ion-button block on-click="ExploreMap()" round large>Explore My Area</button>
   <button ion-button block on-click="GoToBestPractice()" round large>Patient Care - Best Practice</button>
+</ion-footer>
 </ion-content>
