--- a/src/pages/t-pa-no/t-pa-no.html
+++ b/src/pages/t-pa-no/t-pa-no.html
@@ -26,8 +26,9 @@
   <h5><i>Reference:</i></h5><p><i>Telestroke Referring Site Handbook</i></p>
 </div>
 </div>
-<br>
+</ion-content>
+<ion-footer mode="md">
   <button ion-button block on-click="Treatment()" round large>Treatment Options</button>
   <button ion-button block on-click="ExploreMap()" round large>Explore My Area</button>
   <button ion-button block on-click="GoToBestPractice()" round large>Patient Care - Best Practice</button>
-</ion-content>
+</ion-footer>
