--- a/src/pages/treatment/treatment.html
+++ b/src/pages/treatment/treatment.html
@@ -338,7 +338,7 @@
     </div>
 
 
-    <ion-footer #footer>
+    <ion-footer mode="md" #footer>
     <!--the weather information of the origin location  -->
     <ion-grid style="background-color: #006bb6;">
       <ion-row>
