--- a/src/index.html
+++ b/src/index.html
@@ -43,7 +43,7 @@
 
   <script src="cordova.js"></script>
 
-  <script async defer
+  <script 
   src="https://maps.googleapis.com/maps/api/js?key=AIzaSyC2GRIwOatzPmiamkpv3znVK8hi9g4lGoU">
   </script>
 
