--- a/src/pages/next-steps/next-steps.html
+++ b/src/pages/next-steps/next-steps.html
@@ -109,6 +109,8 @@
       <h5><i>Reference:</i></h5><p><i>NWO TIA and Mild Non-Disabling Stroke TRIAGE Algorithm. Specifically the section for >48 hours</i></p>
     </div>
   </div>
+  <ion-footer mode="md">
   <button ion-button block on-click="GoToMap()" round large>Map My Route</button>
   <button ion-button block on-click="GoToBestPractice()" round large>Patient Care - Best Practice</button>
+</ion-footer>
 </ion-content>
